Updated login finished

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DATABASE_URL="postgresql://postgres.jwwoqkogjqmngzxnacyy:9Uin8dAketflhnvE@aws-0-
 
 # Direct connection to the database. Used for migrations.
 DIRECT_URL="postgresql://postgres.jwwoqkogjqmngzxnacyy:9Uin8dAketflhnvE@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+
+SECRET_KEY=NAGAJAYA42
+
+USERNAME=test
+PASSWORD=test
