--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "react": "^18",
@@ -27,6 +29,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
