--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
+    "fuzzysearch-ts": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
