--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
+    "prettier": "^3.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
